sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: '(' expected but identifier found.
    if plusPetit(i,i-1) {
       ^